--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     /* Flower Background */
     body {
       font-family: Arial, sans-serif;
-      background-image: url('Image/s1.jpg'); /* Replace with your actual flower background image URL */
+      background-image: url('s1.jpg'); /* Replace with your actual flower background image URL */
       background-size: cover;
       background-position: center;
       color: white;
