--- a/invitation.html
+++ b/invitation.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('image/s3.jpg'); /* Replace with your actual image URL */
+      background-image: url('s3.jpg'); /* Replace with your actual image URL */
       background-size: cover;
       background-position: center;
       margin: 0;
