--- a/invitation.html
+++ b/invitation.html
@@ -44,6 +44,12 @@
     <p>8637262722, 9337883959</p>
     <p>Thank you!</p>
   </div>
+  <div class="links">
+      <p><strong>Click Here</strong></p>
+      <p><strong>Location:</strong> <a href="https://maps.app.goo.gl/6xnn8PaDDFjWAzWz8" target="_blank">View on Google Maps</a></p>
+      <p><strong>Follow us:</strong> <a href="https://www.instagram.com/the_boys_club_here_?igsh=MWdiOGRuN2NkaDdjYQ==" target="_blank">the_boys_club_here</a></p>
+    </div>
+  </div>
 
   <script>
     // Get name from URL query parameter and display greeting
